changed about page for first assignment

--- a/src/web/app/pages-static/about-page/about-page.component.html
+++ b/src/web/app/pages-static/about-page/about-page.component.html
@@ -1,5 +1,11 @@
 <div>
   <h1 class="color-orange">About Us</h1>
+  
+  <p class="h3">ALT-F4</p>
+  <p>
+  Stephanie Wood, Stephen Brustowicz, David Breeden, James Spies
+  </p>
+
   <p class="h3">Acknowledgements:</p>
   <p>
     TEAMMATES team wishes to thank the following invaluable contributions:
